[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/appliances/oven/progress.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sfx/sfx_sizzle_loop.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/viewport.gd" type="Script" id=3]
[ext_resource path="res://scenes/appliances/oven/griddle_zone.gd" type="Script" id=4]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D/Viewport/GriddleProgress:tint")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.788235, 0.0666667, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite3D/Viewport/GriddleProgress:value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Timer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "burning"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D/Viewport/GriddleProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D/Viewport/GriddleProgress:tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.101961, 0.101961, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Timer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "cook"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Timer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "start"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=15]
resource_name = "cooked"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.00361011, 0.98917, 1 )
colors = PoolColorArray( 1, 1, 1, 0.0392157, 0.0938628, 0.0938628, 0.0938628, 0.0938628, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.1
linear_accel = 1.0
tangential_accel = 0.2
damping = 0.5
damping_random = 1.0
scale = 5.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=12]
material = SubResource( 4 )
radius = 0.04
height = 0.08
rings = 12

[node name="GriddleZone" type="Position3D"]
script = ExtResource( 4 )

[node name="SfxSizzle" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 10.0
max_db = 6.0
bus = "Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/burning = SubResource( 16 )
anims/cook = SubResource( 13 )
anims/cooked = SubResource( 15 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
cast_shadow = 0
flip_v = true
opacity = 0.0
pixel_size = 0.0025
billboard = 1
alpha_cut = 2

[node name="Viewport" type="Viewport" parent="Sprite3D"]
size = Vector2( 90, 90 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
gui_disable_input = true
script = ExtResource( 3 )

[node name="GriddleProgress" parent="Sprite3D/Viewport" instance=ExtResource( 1 )]
tint = Color( 0, 0.788235, 0.0666667, 1 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
emitting = false
lifetime = 1.25
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
